@@ -14,15 +14,15 @@
     </Configuration>
   </Configurations>
   <Contents>
-    <File name="./EmptyDestructorTest.cs" subtype="Code" buildaction="Compile" />
-    <File name="./IDisposableWithDestructorWithoutSuppressFinalizeTest.cs" subtype="Code" buildaction="Compile" />
-    <File name="./UseStringEmptyTest.cs" subtype="Code" buildaction="Compile" />
-    <File name="./AvoidUnusedParametersTest.cs" subtype="Code" buildaction="Compile" />
-    <File name="./AvoidUncalledPrivateCodeTest.cs" subtype="Code" buildaction="Compile" />
-    <File name="./AvoidUninstantiatedInternalClassesTest.cs" subtype="Code" buildaction="Compile" />
-    <File name="./UsingStringLengthInsteadOfCheckingEmptyStringTest.cs" subtype="Code" buildaction="Compile" />
-    <File name="./AvoidToStringOnStringsTest.cs" subtype="Code" buildaction="Compile" />
-    <File name="./DontIgnoreMethodResultTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="EmptyDestructorTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="IDisposableWithDestructorWithoutSuppressFinalizeTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="UseStringEmptyTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidUnusedParametersTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidUncalledPrivateCodeTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidUninstantiatedInternalClassesTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="UsingStringLengthInsteadOfCheckingEmptyStringTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidToStringOnStringsTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="DontIgnoreMethodResultTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="Gendarme.Rules.Performance" />
