@@ -1,3 +1,11 @@
+2008-01-03  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidReturningArraysOnPropertiesTest.cs: New. Unit tests by 
+	Adrian Tsai
+	* AvoidUninstantiatedInternalClassesTest.cs: Add new enum test cases.
+	* Test.Rules.Performance.mdp: Add new test for MonoDevelop project 
+	file.
+
 2007-12-21  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidUncalledPrivateCodeTest.cs, AvoidUnusedParametersTest.cs:
